
- On popular demand, the command tool has two new buttons:
  * `until' runs the program until a line greater than the current is
    reached or the current stack frame is exited.  Requires GDB.
  * `make' invokes the `make' program.


Data exploration
----------------

- Watchpoints.  You can have the debugged program stop automatically
  whenever a particular variable is read or written.

- In `stacked window' configuration, the data window automatically
  pops up as soon as some value is displayed, and it pops down as soon
  as the last visible display is deleted.

- You can easily display variable values in the data window by
  double-clicking on an occurrence.

- The `Undisplay ()' button also deletes all aliases of the selected
  display.  See the `deleteAliasDisplays' resource for details.

- Deleting all displays at once requires confirmation from GDB.

- Using GDB, VALUEs that are repeated N times are now displayed as
  `VALUE <Nx>', saving space in the data display; see `Edit->GDB
  Settings->Threshold for repeated print elements'.  Setting the
  `expandRepeatedValues' resource to `on' turns this off.

- Displays are persistent across recompilation.  This is achieved via
  `deferred' displays, whose creation is deferred until a particular
  scope is entered.  In the same veine, displays are also persistent
  across debugging sessions, even if no core dump was included.


Program Execution
-----------------

- Signal handling.  Using GDB, you can control whether signals are
  passed to your program and whether they interrupt execution.  See
  `Status->Signals' for details.

- Frozen X display detection.  When detecting a grabbed mouse pointer
  after reaching a breakpoint, DDD now automatically continues
  execution, rather than attempting to ungrab the pointer.


Help and Assistance
-------------------

- Improved help system.  In accordance with the Motif style guide, F1
  invokes help on the item pointed at; Shift+F1 lets you choose an item.
